# faces

./: LICENSE  README.md
src/: CMakeLists.txt  create_images.pl  facefinder.cpp
